--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,33 +1,27 @@
+* { margin:0; padding:0; box-sizing:border-box; }
 body{
-	background-color: white;
-	font-family: Helvetica;
+	color:#333;
+	font-family: Helvetica, arial, sans-serif;
+	font-size:16px;
+	line-height:1.3;
 }
-
-
-
-img.wjogger {
-	width:1003px;
-    height: 496px;
+section {
+    padding: 5em 0;
 }
-
-div {width: 125px;
-     
-     padding: 15px;
-     text-align: center;
-
-     background-color: #5cc2a1;
-     color: white;
-     }
-
-h1 {
-	color: #5cc2a1;
-}
-
-
-div.footer {
-     width:1003px;
-     height: 100px;
+footer {
      background-color: grey;
      color: white;
-     }
-
+}
+#intro {
+    background: url(../images/jogger.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 90vh;
+}
+.cta {
+	display:inline-block;
+     padding: 15px;
+     background-color: #5cc2a1;
+     color: white;
+     text-decoration:none;
+}
