--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -29,10 +29,10 @@ nav a {
         
 }
 
-nav a:hover {
+/*nav a:hover {
         color: #5cc2a1;
 
-}
+}*/
 
 /* -------------End Navigation-------------- */
 
